--- a/assets/css/paperbuzzviz.css
+++ b/assets/css/paperbuzzviz.css
@@ -24,86 +24,50 @@
 	fill: #304345;
 }
 
-.paperbuzz-row {
-    margin-bottom: 1em;
+.paperbuzz-source-row + .paperbuzz-source-row {
+  margin-top: 2em;
+  clear: both;
 }
 
-.paperbuzz-category-row-heading {
-    font-size: 1.2em;
+/*Temporary for providing a compact visualization*/
+.paperbuzz-source-row.paperbuzz-compact {
+	margin-top: 0em;
 }
 
-.paperbuzz-category-row-info {
-	display: inline-block;
-	width: 14px;
-	height: 14px;
-	border: none;
-	background-color: transparent;
-    position: relative;
-    top: -5px;
-    left: 2px;
-    margin-top: 5px;
+.paperbuzz-source-heading {
+  padding: 0.5em 0;
+  border-top: 1px solid rgba(0,0,0,0.1);
 }
 
 .paperbuzz-count-label {
-	width: 100px;
-    float: left;
-    margin-top: .5em;
-	margin-right: 2em;
-	padding: 0.8em;
-	text-align: center;
-	border: 1px solid #c5dbec; 
-	background: #c8d7d7;  
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px; 
-	border-radius: 5px;
-	color: #304345;	
-	
+  float: right;
+  width: auto;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border: none;
+  text-align: left;
+  color: inherit;
+  display: inline-block;
+  margin-left: 1em;
 }
 
-.paperbuzz-count-label a {
-    text-decoration: none;
-}
-
-.paperbuzz-count-label a:hover {
-	background-color: transparent !important;
-	color: #555555 !important;
-}
-
-.paperbuzz-count-label img {
-	padding-right:0.5em;
-}
-
-.paperbuzz-count {
-	font-size: 1.15em;
-	padding-bottom: 0.4em;
-	padding-top: 0.4em;
-	font-weight: bold;
-	vertical-align: middle;
+.paperbuzz-controls {
+  text-align: right;
 }
 
 .paperbuzz-control {
-	text-decoration: underline;
-	color: blue;
+  border: none;
+  background: transparent;
+  box-shadow: ;
+  font-size: 11px;
+  opacity: 0.60;
 }
 
 .paperbuzz-control.active {
-	text-decoration: none;
-	color: black;
+  opacity: 1;
 }
 
-/*.paperbuzz-control.disabled {
-	cursor: default;
-	text-decoration: none;
-	color: grey;
-}
-*/
-.paperbuzz-control:hover {
-	background-color: transparent;
-}
-
-.label-img {
-	vertical-align: middle;
-}
 
 .paperbuzz-tooltip {
 	line-height: 1;
